infra/web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupiter-web
  namespace: jupiter
spec:
  type: ClusterIP
  selector:
    app: jupiter-web
  ports:
    - name: http
      port: 80
      targetPort: 5173
