infra/web/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupiter-web
  namespace: jupiter
spec:
  ingressClassName: nginx
  rules:
    - host: workspace.192.168.45.101.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupiter-web
                port:
                  number: 80
